--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,7 @@
 			android:label="@string/app_name">
 
 		</activity>
+
 		<activity android:name="com.ch.recsysapp.LoginActivity"
 			android:label="@string/app_name">
 			<intent-filter>
@@ -18,8 +19,11 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
+
 		<activity android:name="com.ch.recsysapp.DetailActivity"
-			android:label="@string/app_name">
+			android:label="@string/detail_title" android:parentActivityName="com.ch.recsysapp.MainActivity">
+			<meta-data android:name="android.support.PARENT_ACTIVITY"
+				android:value="com.ch.recsysapp.MainActivity" />
 		</activity>
 	</application>
 
