--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,30 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.ch.recsysapp" android:versionCode="1" android:versionName="1.0">
+    package="com.ch.recsysapp"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="19" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
 
-	<application android:allowBackup="true" android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name" android:theme="@style/AppTheme">
-		<activity android:name="com.ch.recsysapp.MainActivity"
-			android:label="@string/app_name">
+    <uses-permission android:name="android.permission.INTERNET" />
 
-		</activity>
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.ch.recsysapp.MainActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.ch.recsysapp.LoginActivity"
+            android:label="@string/app_name" >
+             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-		<activity android:name="com.ch.recsysapp.LoginActivity"
-			android:label="@string/app_name">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-
-		<activity android:name="com.ch.recsysapp.DetailActivity"
-			android:label="@string/detail_title" android:parentActivityName="com.ch.recsysapp.MainActivity">
-			<meta-data android:name="android.support.PARENT_ACTIVITY"
-				android:value="com.ch.recsysapp.MainActivity" />
-		</activity>
-	</application>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.ch.recsysapp.DetailActivity"
+            android:label="@string/detail_title"
+            android:parentActivityName="com.ch.recsysapp.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ch.recsysapp.MainActivity" />
+        </activity>
+        
+    </application>
 
 </manifest>
